--- a/flutter_launcher_icons.yaml
+++ b/flutter_launcher_icons.yaml
@@ -1,3 +1,4 @@
+# flutter pub run flutter_launcher_icons
 flutter_launcher_icons:
   image_path: "assets/icons/app_icon/sugar+.png"
 
@@ -6,11 +7,13 @@ flutter_launcher_icons:
   min_sdk_android: 21 # android min sdk min:16, default 21
   adaptive_icon_background: "assets/icons/app_icon/sugar+.png"
   adaptive_icon_foreground: "assets/icons/app_icon/sugar+.png"
+  adaptive_icon_foreground_inset: 16
   adaptive_icon_monochrome: "assets/icons/app_icon/sugar+.png"
 
-  ios: true
-  image_path_ios: "assets/icons/app_icon/sugar+.png"
-  remove_alpha_channel_ios: true
-  image_path_ios_dark_transparent: "assets/icons/app_icon/sugar+.png"
-  image_path_ios_tinted_grayscale: "assets/icons/app_icon/sugar+.png"
-  desaturate_tinted_to_grayscale_ios: true
+  # ios: true
+  # image_path_ios: "assets/icons/app_icon/sugar+.png"
+  # remove_alpha_ios: true
+  # image_path_ios_dark_transparent: "assets/icons/app_icon/sugar+.png"
+  # image_path_ios_tinted_grayscale: "assets/icons/app_icon/sugar+.png"
+  # desaturate_tinted_to_grayscale_ios: true
+  # background_color_ios: "#ffffff"
